test/files/pos/t229.scala
class Test extends java.util.ArrayList[Object] {
  override def add(index: Int, element: java.lang.Object): Unit = {}
}
