test/files/neg/abstract-class-error/S.scala
class S extends J {
  def f() = 55
  def g(y: Int, z: java.util.List[String]) = 11
}
